Sunday, April 28, Al Riddoch

	* src/Player.cpp: Fix so that GotAllCharacters is emitted when
	  there are no characters to get.

Saturday, April 27, James Turner

	* Updated configure to use AM_PATH_WFMATH, require
	  version 0.2.6, and added the macro to acinclude
	  so people don't get broken.

Wednesday, April 23, James Turner

	* Comitting some docs I've been working on since
	  Christmas, in TeX format initially. Much work ahead,
	  contributions gladly recieved.
	* Removed the old math types code (WFmath is used by
	  all the clients now)
	* Bumped the version up to 0.9.5 now the old
	  Point / Orientation / BBox stuff is gone.
	  
Wednesday, April 17, James Turner

	* Added entity tests (incomplete, and not linking for some
	  odd reason). Something to do with WFMath I suspect, it's
	  all rsteinke's fault :)

Wednesday, April 17 2002, Ron Steinke

	* Added a test to PollDefault: if there are no file
	  descriptors, fall out immediately before trying
	  to poll

Wednesday, April 17 2002, Ron Steinke

	* Changed Time::Stamp from a typedef'd struct to a full
	  class, operator-(const Stamp&, const Stamp&) is now
	  recognized properly

Monday, April 15 2002, James Turner

	* Unit tests! Configure with --enable-cppunit, and do
	  'make check' to run them. Note they only cover a few
	  classes at present, feel free to add more, or suggest
	  them in RT.

Wednesday, April 10 2002, James Turner

	* Fixed OOG emotes in Room.cpp (dispatcher logic was totally
	  wrong, the replacement is big but correct)
	* Moved logging resposibilites from Connection to seperate
	  Log.h file. Presently, this means clients which used to
	  attach to Eris::Connection::Log should now use
	  Eris::Logged.
	* Updated all the Eris log call sites to use the new impl
	* Numerous Metaserver tweaks to make it more stable when
	  connection errors and timeouts occurs; needs more work,
	  alas.

Monday, April 08 2002, Al Riddoch
